--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -470,6 +470,7 @@
     <string name="connect_consent_check" cc:translatable="true">Click here to give consent</string>
     <string name="connect_consent_button" cc:translatable="true">OK</string>
 
+    <string name="connect_phone_page_title" cc:translatable="true">Phone Number</string>
     <string name="connect_phone_title" cc:translatable="true">Primary Phone</string>
     <string name="connect_phone_message" cc:translatable="true">Please enter your primary phone number</string>
     <string name="connect_phone_button" cc:translatable="true">OK</string>
@@ -477,9 +478,10 @@
     <string name="connect_phone_available" cc:translatable="true">Phone number is available!</string>
     <string name="connect_phone_unavailable" cc:translatable="true">Phone number is already in use</string>
     <string name="connect_phone_invalid" cc:translatable="true">Enter a valid phone number</string>
+    <string name="connect_phone_not_alt" cc:translatable="true">Can not use your alt. number</string>
     <string name="connect_phone_not_found" cc:translatable="true">Phone number not found</string>
 
-    <string name="connect_password_title" cc:translatable="true">Choose Password</string>
+    <string name="connect_password_title" cc:translatable="true">Set Password</string>
     <string name="connect_password_message" cc:translatable="true">Please choose a recovery password</string>
     <string name="connect_password_button" cc:translatable="true">OK</string>
     <string name="connect_password" cc:translatable="true">Enter Password</string>
@@ -498,7 +500,8 @@
     <string name="connect_password_recovery_message" cc:translatable="true">You entered the wrong password too many times, you will need to recover your account.</string>
     <string name="connect_password_fail_button" cc:translatable="true">OK</string>
 
-    <string name="connect_recovery_title" cc:translatable="true">ConnectID Account</string>
+    <string name="connect_recovery_title" cc:translatable="true">ConnectID Setup</string>
+    <string name="connect_recovery_title2" cc:translatable="true">Identify Existing Account</string>
     <string name="connect_recovery_decision_new" cc:translatable="true">Choose a step below</string>
     <string name="connect_recovery_button_new" cc:translatable="true">Create New ConnectID Account</string>
     <string name="connect_recovery_button_recover" cc:translatable="true">Recover Existing Account</string>
@@ -516,7 +519,7 @@
 
     <string name="connect_unlock_title" cc:translatable="true">Unlock ConnectID</string>
     <string name="connect_unlock_message" cc:translatable="true">Please unlock to continue</string>
-    <string name="connect_unlock_button_pin" cc:translatable="true">Sign Unlock with PIN</string>
+    <string name="connect_unlock_button_pin" cc:translatable="true">Unlock with PIN</string>
     <string name="connect_unlock_button_password" cc:translatable="true">Unlock with Password</string>
     <string name="connect_unlock_trouble_message" cc:translatable="true">Trouble unlocking?</string>
     <string name="connect_unlock_fingerprint_title" cc:translatable="true">Unlock via fingerprint</string>
@@ -526,6 +529,7 @@
     <string name="connect_unlock_pin_message" cc:translatable="true">Enter your PIN to continue</string>
 
     <string name="connect_register_title" cc:translatable="true">Create Account</string>
+    <string name="connect_register_title2" cc:translatable="true">ConnectID</string>
     <string name="connect_register_id" cc:translatable="true">User ID</string>
     <string name="connect_register_name" cc:translatable="true">Name</string>
     <string name="connect_register_dob" cc:translatable="true">Date of Birth (YYYY-MM-DD)</string>
@@ -541,14 +545,15 @@
     <string name="connect_register_success_message" cc:translatable="true">Your ConnectID account has been successfully created and is now ready for you to use!</string>
     <string name="connect_register_success_button" cc:translatable="true">OK</string>
 
-    <string name="connect_verify_title" cc:translatable="true">Login Options</string>
+    <string name="connect_verify_title" cc:translatable="true">Unlock Options</string>
     <string name="connect_verify_message" cc:translatable="true">Please configure at least one local verification method. Check means configured, eye means not configured, X means unavailable.</string>
     <string name="connect_verify_fingerprint" cc:translatable="true">Fingerprint</string>
     <string name="connect_verify_pin" cc:translatable="true">PIN</string>
     <string name="connect_verify_button_configured" cc:translatable="true">Continue</string>
     <string name="connect_verify_button_password" cc:translatable="true">Use Password Only</string>
 
-    <string name="connect_verify_phone_title" cc:translatable="true">Enter verification code</string>
+    <string name="connect_verify_phone_title" cc:translatable="true">Verification Code</string>
+    <string name="connect_verify_phone_title2" cc:translatable="true">Enter verification code</string>
     <string name="connect_verify_phone_label" cc:translatable="true">We sent you a code on number %s.</string>
     <string name="connect_verify_phone_label_alternate" cc:translatable="true">Almost there! Please enter the code sent via SMS to your alternate phone%s.</string>
     <string name="connect_verify_phone_resend" cc:translatable="true">Didn\'t receive your code? Resend</string>
