--- a/app/assets/locales/android_translatable_strings.txt
+++ b/app/assets/locales/android_translatable_strings.txt
@@ -2,6 +2,7 @@ option.yes=YES
 option.no=NO
 option.cancel=CANCEL
 dialog.ok=OK
+dialog.do.not.show=Don't show again
 
 updates.found=Updates found! Downloading new resource ${0} done of ${1}
 updates.success=App is up to date
@@ -965,6 +966,9 @@ tts.speak.failed=Couldn't speak now. Please try again!
 
 file.oversize.error.title=File Too Large
 file.oversize.error.message=Selected file exceeds the file size limit of 15 MB. Please select a file whose size is less than 15 MB.
+
+fcm.sync.pending.form.entry.title=Pending Sync
+fcm.sync.pending.form.entry.detail=There are new cases available but the Sync can't run while a form is open. A Sync will be triggered upon form submission!
 
 android.package.name.org.commcare.dalvik.reminders=CommCare Reminders
 android.package.name.callout.commcare.org.sendussd=Commcare USSD
