Block unsafe events when a background sync is underway
This includes Logouts, Syncs and Form Entries

--- a/app/assets/locales/android_translatable_strings.txt
+++ b/app/assets/locales/android_translatable_strings.txt
@@ -969,6 +969,9 @@ file.oversize.error.message=Selected file exceeds the file size limit of 15 MB. 
 
 fcm.sync.pending.form.entry.title=Pending Sync
 fcm.sync.pending.form.entry.detail=There are new cases available but the Sync can't run while a form is open. A Sync will be triggered upon form submission!
+fcm.sync.logout.attempt.during.sync=Can't log out while a Sync is underway!
+fcm.sync.user.sync.attempt.during.sync=Can't trigger a Sync while another is underway!
+fcm.sync.form.entry.attempt.during.sync=A Form can't be open while a Sync is underway!
 
 android.package.name.org.commcare.dalvik.reminders=CommCare Reminders
 android.package.name.callout.commcare.org.sendussd=Commcare USSD
