--- a/app/assets/locales/android_translatable_strings.txt
+++ b/app/assets/locales/android_translatable_strings.txt
@@ -972,6 +972,7 @@ fcm.sync.pending.form.entry.detail=There are new cases available but the Sync ca
 fcm.sync.logout.attempt.during.sync=Can't log out while a Sync is underway!
 fcm.sync.user.sync.attempt.during.sync=Can't trigger a Sync while another is underway!
 fcm.sync.form.entry.attempt.during.sync=A Form can't be open while a Sync is underway!
+fcm.sync.fail=Background sync failed. Please try to trigger a normal Sync
 
 android.package.name.org.commcare.dalvik.reminders=CommCare Reminders
 android.package.name.callout.commcare.org.sendussd=Commcare USSD
