--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -467,6 +467,9 @@
     <string name="dependency_missing_dialog_go_to_store" cc:translatable="true">Install from Store</string>
     <string name="dependency_missing_dialog_playstore_not_found" cc:translatable="true">No Play Store found on your device</string>
 
+    <string name="fcm_notification">FCM Notification</string>
+    <string name="fcm_default_notification_channel">notification-channel-server-communications</string>
+
     <string name="app_select_message" cc:translatable="true">Select an app:</string>
 
     <!-- ConnectID strings -->
