--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -659,4 +659,6 @@
     <string name="login_menu_connect_sign_in">Sign up for ConnectID</string>
     <string name="login_menu_connect_sign_out">Sign out of ConnectID</string>
     <string name="login_menu_connect_forget">Forget ConnectID user</string>
+    <string name="connect_app_install_unknown_error">App install failed due to an unknown error</string>
+    <string name="connect_app_installed">App installed</string>
 </resources>
