If preset app id is present, set single app layout and seat preset record if needed

--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -452,4 +452,5 @@
     <string name="dependency_missing_dialog_playstore_not_found" cc:translatable="true">No Play Store found on your device</string>
     <string name="fcm_notification">FCM Notification</string>
     <string name="fcm_default_notification_channel">notification-channel-server-communications</string>
+    <string name="app_with_id_not_found">Required CommCare App is not installed on device</string>
 </resources>
